@@ -1,21 +1,10 @@
 package com.baeldung.vavr.collections;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertTrue;
-
-import java.util.Comparator;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
-import org.junit.Test;
-
 import io.vavr.Tuple;
 import io.vavr.Tuple2;
-import io.vavr.collection.Array;
-import io.vavr.collection.CharSeq;
+import io.vavr.collection.*;
+import io.vavr.collection.BitSet;
+import io.vavr.collection.HashMap;
 import io.vavr.collection.HashSet;
 import io.vavr.collection.Iterator;
 import io.vavr.collection.List;
@@ -24,23 +13,84 @@ import io.vavr.collection.Queue;
 import io.vavr.collection.Set;
 import io.vavr.collection.SortedMap;
 import io.vavr.collection.SortedSet;
-import io.vavr.collection.Stream;
 import io.vavr.collection.TreeMap;
 import io.vavr.collection.TreeSet;
 import io.vavr.collection.Vector;
+import org.junit.Test;
+
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotSame;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
 
 public class CollectionAPIUnitTest {
 
+
     @Test
-    public void givenEmptyList_whenStacked_thenCorrect() {
+    public void givenParams_whenListAPI_thenCorrect() {
+
+        List<String> list
+          = List.of("Java", "PHP", "Jquery", "JavaScript", "JShell", "JAVA");
+
+        List list1 = list.drop(2);
+        assertFalse(list1.contains("Java") && list1.contains("PHP"));
+
+        List list2 = list.dropRight(2);
+        assertFalse(list2.contains("JAVA") && list2.contains("JShell"));
+
+        List list3 = list.dropUntil(s -> s.contains("Shell"));
+        assertEquals(list3.size(), 2);
+        
+        List list4 = list.dropWhile(s -> s.length() > 0);
+        assertTrue(list4.isEmpty());
+
+        List list5 = list.take(1);
+        assertEquals(list5.single(), "Java");
+
+        List list6 = list.takeRight(1);
+        assertEquals(list6.single(), "JAVA");
+
+        List list7 = list.takeUntil(s -> s.length() > 6);
+        assertEquals(list7.size(), 3);
+
+        List list8
+          = list.distinctBy( (s1, s2) -> s1.startsWith(s2.charAt(0)+"") ? 0 : 1);
+        assertEquals(list8.size(), 2);
+
+        Iterator<List<String>> iterator = list.grouped(2);
+        assertEquals(iterator.head().size(), 2);
+
+        Map<Boolean, List<String>> map = list.groupBy(e -> e.startsWith("J"));
+        assertEquals(map.size(), 2);
+        assertEquals(map.get(false).get().size(), 1);
+        assertEquals(map.get(true).get().size(), 5);
+
+        String words = List.of("Boys", "Girls")
+                         .intersperse("and")
+                         .reduce((s1, s2) -> s1.concat( " " + s2 ))
+                         .trim();
+        
+        assertEquals(words, "Boys and Girls");
+
+    }
+
+    @Test
+    public void givenEmptyList_whenStackAPI_thenCorrect() {
+
         List<Integer> intList = List.empty();
 
-        List<Integer> anotherList = intList.push(4)
-          .push(0);
-        Iterator<Integer> iterator = anotherList.iterator();
+        List<Integer> intList1 = intList.pushAll(List.rangeClosed(5,10));
 
-        assertEquals(new Integer(0), iterator.next());
-        assertEquals(new Integer(4), iterator.next());
+        assertEquals(intList1.peek(), Integer.valueOf(10));
+
+        List intList2 = intList1.pop();
+        assertEquals(intList2.size(), (intList1.size() - 1) );
+
     }
 
     @Test
@@ -62,27 +112,36 @@ public class CollectionAPIUnitTest {
 
     @Test
     public void givenQueue_whenEnqueued_thenCorrect() {
+
         Queue<Integer> queue = Queue.of(1, 2, 3);
-        Queue<Integer> secondQueue = queue.enqueue(4)
-          .enqueue(5);
+        Queue<Integer> secondQueue = queue.enqueueAll(List.of(4,5));
 
         assertEquals(3, queue.size());
         assertEquals(5, secondQueue.size());
 
         Tuple2<Integer, Queue<Integer>> result = secondQueue.dequeue();
-        Integer headValue = result.apply((head, tail) -> head);
-        assertEquals(new Integer(1), headValue);
+        assertEquals(Integer.valueOf(1), result._1);
 
-        Iterator<Integer> iterator = result.apply((head, tail) -> tail.iterator());
+        Queue<Integer> tailQueue = result._2;
+        assertFalse(tailQueue.contains(secondQueue.get(0)));
 
-        assertEquals(new Integer(2), iterator.next());
-        assertEquals(new Integer(3), iterator.next());
-        assertEquals(new Integer(4), iterator.next());
-        assertEquals(new Integer(5), iterator.next());
+        Queue<Queue<Integer>> queue1 = queue.combinations(2);
+        assertEquals(queue1.get(2).toCharSeq(), CharSeq.of("23"));
     }
 
     @Test
     public void givenStream_whenProcessed_thenCorrect() {
+
+        Stream<Integer> s1 = Stream.tabulate(5, (i)-> i + 1);
+        assertEquals(s1.get(2).intValue(), 3);
+
+        Stream<Integer> s = Stream.of(2,1,3,4);
+
+        Stream<Tuple2<Integer, Integer>> s2 = s.zip(List.of(7,8,9));
+        Tuple2<Integer, Integer> t1 = s2.get(0);
+        assertEquals(t1._1().intValue(), 2);
+        assertEquals(t1._2().intValue(), 7);
+
         Stream<Integer> intStream = Stream.iterate(0, i -> i + 1)
           .take(10);
 
@@ -93,21 +152,27 @@ public class CollectionAPIUnitTest {
           .longValue();
 
         assertEquals(20, evenSum);
-        assertEquals(new Integer(5), intStream.get(5));
     }
 
     @Test
     public void givenArray_whenQueried_thenCorrect() {
+
+        Array<Integer> rArray = Array.range(1, 5);
+        assertFalse(rArray.contains(5));
+
+        Array<Integer> rArray2 = Array.rangeClosed(1, 5);
+        assertTrue(rArray2.contains(5));
+
+        Array<Integer> rArray3 = Array.rangeClosedBy(1,6,2);
+        assertEquals(rArray3.size(), 3);
+
         Array<Integer> intArray = Array.of(1, 2, 3);
         Array<Integer> newArray = intArray.removeAt(1);
-
-        assertEquals(3, intArray.size());
         assertEquals(2, newArray.size());
+        assertEquals(3, newArray.get(1).intValue());
 
-        assertEquals(new Integer(1), intArray.get(0));
-        assertEquals(new Integer(2), intArray.get(1));
-        assertEquals(new Integer(3), intArray.get(2));
-        assertEquals(new Integer(3), newArray.get(1));
+        Array<Integer> array2 = intArray.replace(1, 5);
+        assertEquals(array2.get(0).intValue(), 5);
     }
 
     @Test
@@ -118,10 +183,8 @@ public class CollectionAPIUnitTest {
         assertEquals(4, intVector.size());
         assertEquals(4, newVector.size());
 
-        assertEquals(new Integer(1), intVector.get(0));
-        assertEquals(new Integer(2), intVector.get(1));
-        assertEquals(new Integer(3), intVector.get(2));
-        assertEquals(new Integer(6), newVector.get(1));
+        assertEquals(2, intVector.get(1).intValue());
+        assertEquals(6, newVector.get(1).intValue());
     }
 
     @Test
@@ -144,57 +207,86 @@ public class CollectionAPIUnitTest {
 
         assertEquals(3, set.size());
         assertEquals(4, newSet.size());
-        assertFalse(set.contains("Yellow"));
         assertTrue(newSet.contains("Yellow"));
+
+        HashSet<Integer> set0 = HashSet.rangeClosed(1,5);
+        HashSet<Integer> set1 = HashSet.rangeClosed(3, 6);
+
+        assertEquals(set0.union(set1), HashSet.rangeClosed(1,6));
+        assertEquals(set0.diff(set1), HashSet.rangeClosed(1,2));
+        assertEquals(set0.intersect(set1), HashSet.rangeClosed(3,5));
+
+
     }
 
     @Test
     public void givenSortedSet_whenIterated_thenCorrect() {
         SortedSet<String> set = TreeSet.of("Red", "Green", "Blue");
+        assertEquals("Blue", set.head());
 
-        Iterator<String> iterator = set.iterator();
-        assertEquals("Blue", iterator.next());
-        assertEquals("Green", iterator.next());
-        assertEquals("Red", iterator.next());
+        SortedSet<Integer> intSet = TreeSet.of(1,2,3);
+        assertEquals(2, intSet.average().get().intValue());
+        
     }
 
     @Test
     public void givenSortedSet_whenReversed_thenCorrect() {
-        SortedSet<String> set = TreeSet.of(Comparator.reverseOrder(), "Green", "Red", "Blue");
+        SortedSet<String> reversedSet
+          = TreeSet.of(Comparator.reverseOrder(), "Green", "Red", "Blue");
+        assertEquals("Red", reversedSet.head());
 
-        Iterator<String> iterator = set.iterator();
-        assertEquals("Red", iterator.next());
-        assertEquals("Green", iterator.next());
-        assertEquals("Blue", iterator.next());
+        String str = reversedSet.mkString(" and ");
+        assertEquals("Red and Green and Blue", str);
     }
 
     @Test
-    public void givenMap_whenIterated_thenCorrect() {
+    public void giveBitSet_whenApiMethods_thenCorrect() {
+
+        BitSet<Integer> bitSet = BitSet.of(1,2,3,4,5,6,7,8);
+
+        BitSet<Integer> bitSet1 = bitSet.takeUntil(i -> i > 4);
+        assertEquals(bitSet1.size(), 4);
+
+    }
+
+    @Test
+    public void givenMap_whenMapApi_thenCorrect() {
         Map<Integer, List<Integer>> map = List.rangeClosed(0, 10)
           .groupBy(i -> i % 2);
-
+        
         assertEquals(2, map.size());
+        assertEquals(6, map.get(0).get().size());
+        assertEquals(5, map.get(1).get().size());
 
-        Iterator<Tuple2<Integer, List<Integer>>> iterator = map.iterator();
-        assertEquals(6, iterator.next()
-          ._2()
-          .size());
-        assertEquals(5, iterator.next()
-          ._2()
-          .size());
+        Map<String, String> map1
+          = HashMap.of("key1", "val1", "key2", "val2", "key3", "val3");
+
+        Map<String, String> fMap
+          = map1.filterKeys(k -> k.contains("1") || k.contains("2"));
+        assertFalse(fMap.containsKey("key3"));
+
+        Map<String, String> fMap2
+          = map1.filterValues(v -> v.contains("3"));
+        assertEquals(fMap2.size(), 1);
+        assertTrue(fMap2.containsValue("val3"));
+
+        Map<String, Integer> map2 = map1.map(
+          (k, v) -> Tuple.of(k, Integer.valueOf(v.charAt(v.length() - 1) + "") ));
+        assertEquals(map2.get("key1").get().intValue(), 1);
     }
 
     @Test
     public void givenTreeMap_whenIterated_thenCorrect() {
-        SortedMap<Integer, String> map = TreeMap.of(3, "Three", 2, "Two", 4, "Four", 1, "One");
+        SortedMap<Integer, String> map
+          = TreeMap.of(3, "Three", 2, "Two", 4, "Four", 1, "One");
 
-        Iterator<Tuple2<Integer, String>> iterator = map.iterator();
-        assertEquals(new Integer(1), iterator.next()
-          ._1());
-        assertEquals(new Integer(2), iterator.next()
-          ._1());
-        assertEquals(new Integer(3), iterator.next()
-          ._1());
+        assertEquals(1, map.keySet().toJavaArray()[0]);
+        assertEquals("Four", map.get(4).get());
+
+        TreeMap<Integer, String> treeMap2 =
+          TreeMap.of(Comparator.reverseOrder(), 3,"three", 6, "six", 1, "one");
+        assertEquals(treeMap2.keySet().mkString(), "631");
+
     }
 
     @Test
@@ -203,14 +295,13 @@ public class CollectionAPIUnitTest {
         List<Integer> vavrList = List.ofAll(javaList);
 
         assertEquals(4, vavrList.size());
-        assertEquals(new Integer(1), vavrList.head());
+        assertEquals(1, vavrList.head().intValue());
 
         java.util.stream.Stream<Integer> javaStream = javaList.stream();
         Set<Integer> vavrSet = HashSet.ofAll(javaStream);
 
         assertEquals(4, vavrSet.size());
-        assertEquals(new Integer(2), vavrSet.tail()
-          .head());
+        assertEquals(2, vavrSet.tail().head().intValue());
     }
 
     @Test
@@ -221,7 +312,7 @@ public class CollectionAPIUnitTest {
           .collect(List.collector());
 
         assertEquals(4, vavrList.size());
-        assertEquals(new Integer(2), vavrList.head());
+        assertEquals(2, vavrList.head().intValue());
     }
 
     @Test
@@ -232,17 +323,16 @@ public class CollectionAPIUnitTest {
 
         java.util.Map<String, Integer> map = List.of("1", "2", "3")
           .toJavaMap(i -> Tuple.of(i, Integer.valueOf(i)));
-        assertEquals(new Integer(2), map.get("2"));
+        assertEquals(2, map.get("2").intValue());
     }
-    
+
     @Test
     public void givenVavrList_whenCollected_thenCorrect() {
         java.util.Set<Integer> javaSet = List.of(1, 2, 3)
           .collect(Collectors.toSet());
 
         assertEquals(3, javaSet.size());
-        assertEquals(new Integer(1), javaSet.iterator()
-          .next());
+        assertEquals(1, javaSet.toArray()[0]);
     }
 
     @Test
@@ -251,7 +341,7 @@ public class CollectionAPIUnitTest {
           .asJavaMutable();
         javaList.add(4);
 
-        assertEquals(new Integer(4), javaList.get(3));
+        assertEquals(4, javaList.get(3).intValue());
     }
 
     @Test(expected = UnsupportedOperationException.class)
@@ -259,7 +349,7 @@ public class CollectionAPIUnitTest {
         java.util.List<Integer> javaList = List.of(1, 2, 3)
           .asJava();
 
-        assertEquals(new Integer(3), javaList.get(2));
+        assertEquals(3, javaList.get(2).intValue());
         javaList.add(4);
     }
 
